@@ -1,3 +1,7 @@
+2007-03-18 Borut Razem <borut.razem AT siol.net>
+
+	* /packages/*/Makefile: house cleaning
+
 2007-03-17 Borut Razem <borut.razem AT siol.net>
 
 	* /packages/build.readline/*: added
